# WomoLIN-Sw-MainUnit

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  arm-gcc.cmake  interface.h  main.cpp  manager.cpp  manager.h
Docker/: Dockerfile_gcc9
Firmware/: mainunit.hex
Python/: GetBme680MeasValues.py  GetSignals.py  ToggleAllBiRelays.py  ToggleAllExtRelays.py  helper.py
driver/: CMakeLists.txt  birelay.cpp  birelay.h  circularbuffer.h  controlbus.cpp  controlbus.h  hal.cpp  hal.h  uart.cpp  uart.h  version.cpp  version.h
driver/board/: CMakeLists.txt  birelay.cpp  birelay.h  bme680.cpp  bme680.h  bme680drv.cpp  bme680drv.h  controlbus.cpp  extrelay.cpp  extrelay.h  hellaibs.cpp  hellaibs.h  hellaibs1.cpp  hellaibs1.h  hellaibs2.h  hss.cpp  hss.h  hssdrv.cpp  hssdrv.h  ibs.cpp  ibs.h  led.cpp  led.h  linmgr.cpp  linmgr.h  linmultiplexer.cpp  linmultiplexer.h  lintransceiver.cpp  lintransceiver.h  lsm303.cpp  lsm303.h  lsm303agr.cpp  lsm303agr.h  lsm303agracc.cpp  lsm303agracc.h  lsm303agrmag.cpp  lsm303agrmag.h  relaydrv.cpp  relaydrv.h  version.cpp  (+1 more)
driver/board/ext/: bme680.c  bme680_defs.h
driver/cmsis/inc/: stm32l4xx_it.h
driver/cmsis/src/: CMakeLists.txt  startup_stm32l476xx.s  stm32l4xx_it.cpp
driver/hal/src/: CMakeLists.txt
driver/hw/: CMakeLists.txt  gpio.cpp  gpio.h  i2c.cpp  i2c.h  igpio.h  lin.cpp  lin.h  spi.cpp  spi.h  stm32l4xx_hal_msp.cpp  uart.cpp  uart.h
driver/periphery/: CMakeLists.txt  hellaibs.h  hellaibs1.h  hellaibs2.cpp  hellaibs2.h  ibs.cpp  ibs.h
interface/: ibirelay.h  ibme680.h  icontrolbus.h  iextrelay.h  ihal.h  ihss.h  iibs.h  ilsm303.h
test/hello/: CMakeLists.txt  build.sh  clean.sh  main.cpp
